完成购物车添加功能_改1

--- a/dailyfresh/templates/detail.html
+++ b/dailyfresh/templates/detail.html
@@ -144,7 +144,7 @@
                                 $('#show_count').html(data.cart_num);
                             });
                         });
-                    alert(msg);
+                    {#alert(msg);#}
                 }
                 else if (code == 5) {
                     // 用户没登录,跳转到登录页面
