--- a/dailyfresh/templates/login.html
+++ b/dailyfresh/templates/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="login_top clearfix">
-    <a href="../static/index.html" class="login_logo"><img src="../static/images/logo02.png"></a>
+    <a href="{% url 'goods:index' %}" class="login_logo"><img src="../static/images/logo02.png"></a>
 </div>
 
 <div class="login_form_bg">
@@ -19,7 +19,7 @@
         <div class="login_form fr">
             <div class="login_title clearfix">
                 <h1>用户登录</h1>
-                <a href="#">立即注册</a>
+                <a href="{% url 'users:register' %}">立即注册</a>
             </div>
             <div class="form_input">
                 <form method="post">
