--- a/dailyfresh/templates/user_center_order.html
+++ b/dailyfresh/templates/user_center_order.html
@@ -1,142 +1,105 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>天天生鲜-用户中心</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-<body>
-	<div class="header_con">
-		<div class="header">
-			<div class="welcome fl">欢迎来到天天生鲜!</div>
-			<div class="fr">
-				<div class="login_info fl">
-					欢迎您：<em>张 山</em>
-				</div>
-				<div class="login_btn fl">
-					<a href="login.html">登录</a>
-					<span>|</span>
-					<a href="register.html">注册</a>
-				</div>
-				<div class="user_link fl">
-					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
-					<span>|</span>
-					<a href="cart.html">我的购物车</a>
-					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
-				</div>
-			</div>
-		</div>		
-	</div>
+{% extends 'user_center_base.html' %}
 
-	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="images/logo.png"></a>
-		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
-		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>		
-	</div>
+{% load staticfiles %}
 
-	<div class="main_con clearfix">
-		<div class="left_menu_con clearfix">
-			<h3>用户中心</h3>
-			<ul>
-				<li><a href="user_center_info.html">· 个人信息</a></li>
-				<li><a href="user_center_order.html" class="active">· 全部订单</a></li>
-				<li><a href="user_center_site.html">· 收货地址</a></li>
-			</ul>
-		</div>
-		<div class="right_content clearfix">
-				<h3 class="common_title2">全部订单</h3>
-				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">未支付</li>		
-				</ul>
+{% block title %}天天生鲜-用户中心{% endblock %}
 
-				<table class="order_list_table w980">
-					<tbody>
-						<tr>
-							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-							</td>
-							<td width="15%">33.60元</td>
-							<td width="15%">待付款</td>
-							<td width="15%"><a href="#" class="oper_btn">去付款</a></td>
-						</tr>
-					</tbody>
-				</table>
-				
-				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">已支付</li>			
-				</ul>
-				<table class="order_list_table w980">
-					<tbody>
-						<tr>
-							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-							</td>
-							<td width="15%">33.60元</td>
-							<td width="15%">已付款</td>
-							<td width="15%"><a href="#" class="oper_btn">查看物流</a></td>
-						</tr>
-					</tbody>
-				</table>
+{% block body %}
+    <div class="main_con clearfix">
+        <div class="left_menu_con clearfix">
+            <h3>用户中心</h3>
+            <ul>
+                <li><a href="{% url 'users:info' %}">· 个人信息</a></li>
+                <li><a href="{% url 'orders:info' 1 %}" class="active">· 全部订单</a></li>
+                <li><a href="{% url 'users:address' %}">· 收货地址</a></li>
+            </ul>
+        </div>
+        <div class="right_content clearfix">
+            <h3 class="common_title2">全部订单</h3>
+            {% for order in orders %}
+                <ul class="order_list_th w978 clearfix">
+                    <li class="col01">{{ order.create_time }}</li>
+                    <li class="col02">订单号：{{ order.order_id }}</li>
+                    <li class="col02 stress">{{ order.status_name }}</li>
+                </ul>
 
-				<div class="pagenation">
-					<a href="#"><上一页</a>
-					<a href="#" class="active">1</a>
-					<a href="#">2</a>
-					<a href="#">3</a>
-					<a href="#">4</a>
-					<a href="#">5</a>
-					<a href="#">下一页></a>
-				</div>
-		</div>
-	</div>
+                <table class="order_list_table w980">
+                    <tbody>
+                    <tr>
+                        <td width="55%">
+                            {% for sku in order.skus %}
+                                <ul class="order_goods_list clearfix">
+                                    <li class="col01"><img src="{{ sku.default_image.url }}"></li>
+                                    <li class="col02">{{ sku.name }}<em>{{ sku.price }}/{{ sku.unit }}</em></li>
+                                    <li class="col03">{{ sku.count }}</li>
+                                    <li class="col04">{{ sku.amount }}元</li>
+                                </ul>
+                            {% endfor %}
+                        </td>
+                        <td width="15%">{{ order.total_amount }}元<br/>（含运费{{ order.trans_cost }}元）</td>
+                        <td width="15%">{{ order.pay_method_name }}</td>
+                        <td width="15%"><a href="javascript:;" order_id="{{ order.order_id }}"
+                                           order_status="{{ order.status }}" class="oper_btn">
+                            {{ order.status_name }}
+                        </a></td>
+                    </tr>
+                    </tbody>
+                </table>
+            {% endfor %}
 
+            <div class="pagenation">
+                {% if orders.has_previous %}
+                    <a href="{% url 'orders:info' orders.previous_page_number %}">上一页</a>
+                {% endif %}
+                {% for p in page_list %}
+                    <a href="{% url 'orders:info' p %}" {% if p == order.number %}class="active"{% endif %}>{{ p }}</a>
+                {% endfor %}
+                {% if orders.has_next %}
+                    <a href="{% url 'orders:info' orders.next_page_number %}">下一页></a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
 
+{% block bottom_files %}
 
-	<div class="footer">
-		<div class="foot_link">
-			<a href="#">关于我们</a>
-			<span>|</span>
-			<a href="#">联系我们</a>
-			<span>|</span>
-			<a href="#">招聘人才</a>
-			<span>|</span>
-			<a href="#">友情链接</a>		
-		</div>
-		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
-		<p>电话：010-****888    京ICP备*******8号</p>
-	</div>
-	
-</body>
-</html>
+    <script type="text/javascript">
+        $('.oper_btn').click(function () {
+            var order_id = $(this).attr("order_id");
+            var order_status = $(this).attr("order_status");
+            order_status = parseInt(order_status);
+            if (1 == order_status) {
+                // 表示订单待支付，向django后端索要支付宝的支付链接
+                var req_data = {
+                    order_id: order_id,
+                    csrfmiddlewaretoken: "{{ csrf_token }}"
+                }
+                $.post('/orders/pay', req_data, function (data) {
+                    if (1 == data.code) {
+                        // 用户未登录
+                        location.href = "/users/login";
+                    } else if (0 == data.code) {
+                        // 成功拿到了支付连接，开启一个新页面，让用户在新页面进行支付
+                        window.open(data.url);
+
+                        $.get("/orders/check_pay?order_id=" + order_id, function (resp_data) {
+                            if (0 == resp_data.code) {
+                                // 支付成功
+                                alert("支付成功");
+                                location.reload();
+                            } else {
+                                alert(resp_data.message);
+                            }
+                        });
+                    } else {
+                        alert(data.message);
+                    }
+                });
+            } else if (4 == order_status) {
+                window.location.href = ("/orders/comment/" + order_id);
+                {#				location.href = ("/orders/comment/" + order_id);#}
+            }
+        });
+    </script>
+{% endblock %}
