--- a/dailyfresh/templates/base.html
+++ b/dailyfresh/templates/base.html
@@ -35,16 +35,17 @@
                 <span>|</span>
                 <a href="{% url 'users:info' %}">用户中心</a>
                 <span>|</span>
-                <a href="#">我的购物车</a>
+                <a href="{% url 'cart:info' %}">我的购物车</a>
                 <span>|</span>
-                <a href="#">我的订单</a>
+                {#跳转到 订单页面的第一页#}
+                <a href="{% url 'orders:info' 1 %}">我的订单</a>
             </div>
         </div>
     </div>
 </div>
 {% block search_bar %}
     <div class="search_bar clearfix">
-        <a href="#" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
+        <a href="{% url 'goods:index' %}" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
         <div class="search_con fl">
             <form action="/search/" method="get">
                 <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
