--- a/dailyfresh/templates/user_center_site.html
+++ b/dailyfresh/templates/user_center_site.html
@@ -46,9 +46,9 @@
     <div class="left_menu_con clearfix">
         <h3>用户中心</h3>
         <ul>
-            <li><a href="user_center_info.html">· 个人信息</a></li>
-            <li><a href="user_center_order.html">· 全部订单</a></li>
-            <li><a href="user_center_site.html" class="active">· 收货地址</a></li>
+            <li><a href="{% url 'users:info' %}">· 个人信息</a></li>
+            <li><a href="{% url 'orders:info' 1 %}">· 全部订单</a></li>
+            <li><a href="{% url 'users:address' %}" class="active">· 收货地址</a></li>
         </ul>
     </div>
     <div class="right_content clearfix">
