完成订单商品评论功能

--- a/dailyfresh/templates/detail.html
+++ b/dailyfresh/templates/detail.html
@@ -88,18 +88,27 @@
 
         <div class="r_wrap fr clearfix">
             <ul class="detail_tab clearfix">
-                <li class="active">商品介绍</li>
-                <li>评论</li>
+                <li id="tag_detail" class="active">商品介绍</li>
+                <li id="tag_comment">评论</li>
             </ul>
 
-            <div class="tab_content">
+
+            <div class="tab_content" id="tab_detail">
                 <dl>
                     <dt>商品详情：</dt>
-                    <dd>
-                        {#显示渲染后的标签内容, 注意详情是html代码  转义的问题#}
-                        {{ sku.goods.desc|safe }}
-                    </dd>
+                    {#显示渲染后的标签内容, 注意详情是html代码  转义的问题#}
+                    <dd>{{ sku.goods.desc|safe }}</dd>
                 </dl>
+            </div>
+
+            <div class="tab_content" id="tab_comment" style="display: none;">
+                {% for order in orders %}
+                    <dl>
+                        <dd>客户：{{ order.username }}&nbsp;&nbsp;&nbsp;时间：{{ order.ctime }}</dd>
+                        <dt>{{ order.comment }}</dt>
+                    </dl>
+                    <hr/>
+                {% endfor %}
             </div>
 
         </div>
@@ -110,8 +119,24 @@
 {% endblock body %}
 
 {% block bottom_files %}
-    {#    <script type="text/javascript"></script>#}
     <script type="text/javascript">
+
+        {#商品介绍#}
+        $("#tag_detail").click(function () {
+            $("#tag_comment").removeClass("active");
+            $(this).addClass("active");
+            $("#tab_comment").hide();
+            $("#tab_detail").show();
+        });
+
+        {#商品评论#}
+        $("#tag_comment").click(function () {
+            $("#tag_detail").removeClass("active");
+            $(this).addClass("active");
+            $("#tab_detail").hide();
+            $("#tab_comment").show();
+        });
+
         var $add_x = $('#add_cart').offset().top;
         var $add_y = $('#add_cart').offset().left;
 
