--- a/dailyfresh/templates/user_center_order.html
+++ b/dailyfresh/templates/user_center_order.html
@@ -65,41 +65,61 @@
 {% block bottom_files %}
 
     <script type="text/javascript">
+        //点击按钮去支付 或者去评论
         $('.oper_btn').click(function () {
-            var order_id = $(this).attr("order_id");
-            var order_status = $(this).attr("order_status");
+            var order_id = $(this).attr("order_id"); //取订单号
+            var order_status = $(this).attr("order_status"); //取状态
+
             order_status = parseInt(order_status);
+            //如果状态是待支付
             if (1 == order_status) {
                 // 表示订单待支付，向django后端索要支付宝的支付链接
                 var req_data = {
                     order_id: order_id,
                     csrfmiddlewaretoken: "{{ csrf_token }}"
-                }
-                $.post('/orders/pay', req_data, function (data) {
+                };
+                $.ajax({
+                    url: '/orders/pay',
+                    type: 'post',
+                    data: req_data,
+                    dataType: 'json'
+                }).done(function (data) {
                     if (1 == data.code) {
                         // 用户未登录
                         location.href = "/users/login";
                     } else if (0 == data.code) {
                         // 成功拿到了支付连接，开启一个新页面，让用户在新页面进行支付
                         window.open(data.url);
-
-                        $.get("/orders/check_pay?order_id=" + order_id, function (resp_data) {
+                        $.ajax({
+                            url: '/orders/check_pay',
+                            type: 'get',
+                            data: {order_id: order_id},
+                            dataType: 'json'
+                        }).done(function (resp_data) {
                             if (0 == resp_data.code) {
                                 // 支付成功
                                 alert("支付成功");
+                                {#当前页面刷新#}
                                 location.reload();
                             } else {
-                                alert(resp_data.message);
+                                alert(resp_data.msg);
                             }
-                        });
+                        }).fail(function () {
+                            alert('支付失败lalala');
+                        })
                     } else {
-                        alert(data.message);
+                        alert(data.msg);
                     }
-                });
-            } else if (4 == order_status) {
-                window.location.href = ("/orders/comment/" + order_id);
-                {#				location.href = ("/orders/comment/" + order_id);#}
+                }).fail(function () {
+                    alert('网路异常')
+                })
+
+                // } else if (2 == order_status) {
+            } else if (2 == order_status) {
+                //去评论
+                location.href = ("/orders/comment/" + order_id)
             }
         });
     </script>
+
 {% endblock %}
